refactor(jdk,springboot,config): 升级jdk,springboot,修改配置文件